# SolomiaBot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 32873cadcc6a_add_category_to_user_table.py  5f36aec5e08c_sync_models_after_relationship_refactor.py  6a23e3413062_add_user_table.py  7bcf9dad38d4_add_category_to_user_table.py  8f1f11525ec4_add_report_and_report_items_tables.py  c6a364768d0c_add_user_table.py
docs/: category_logic.md  project_structure.md
docs/plantUML/: readme.md
scripts/: classify_product.py  classify_report.py  db_init.py  enter_meal_plan.py
scripts/init_project/: check_connection.py  seed_category.py
solomia/core/: db.py  handlers.py
solomia/models/: __init__.py  category_to_user.py  food_category.py  reports.py  reports_item.py  user.py
solomia/repository/: __init__.py  base_repository.py  category_repository.py  report_item_repository.py  report_repository.py  user_repository.py
solomia/services/: category_service.py
tests/: test_category_assign.py
